2018-06-06  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (__libdw_dieabbrev): Check DIE addr falls in cu.

2018-06-06  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation_die.c (dwarf_getlocation_die): Check offset
	falls inside cu data.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* dwarf_getsrclines.c (read_srclines): Explicitly set diridx to -1
	in case dwarf_formudata fails.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* dwarf_getaranges (dwarf_getaranges): Free new_arange if
	__libdw_findcu fails.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* dwarf_getsrclines.c (read_srclines): Define dirarray early and
	check whether or not it is equal to dirstack on exit/out before
	cleanup.

2018-06-05  Mark Wielaard  <mark@klomp.org>

	* dwarf_getalt.c (find_debug_altlink): id_path array should be 2
	larger to contain MAX_BUILD_ID_BYTES.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* libdw_find_split_unit.c (try_split_file): New function extracted
	from...
	(__libdw_find_split_unit): ... here. Try both the relative and
	absolute paths to find a .dwo file.

2018-05-30  Mark Wielaard  <mark@klomp.org>

	* libdw/dwarf_getsrclines.c (read_srclines): Change ndir and
	ndirlist to size_t. Add check to see ndirlist doesn't overflow.

2018-05-31  Mark Wielaard  <mark@klomp.org>

	* dwarf_dieoffset.c: Check die->cu != NULL. Return -1, not ~0ul
	on failure.

2018-05-29  Mark Wielaard  <mark@klomp.org>

	* dwarf_cuoffset.c (dwarf_cuoffset): Check die->cu is not NULL.
	* dwarf_die_addr_die.c (dwarf_die_addr_die): Also search split
	Dwarfs.
	* libdwP.h (struct Dwarf): Add split_tree field.
	(__libdw_find_split_dbg_addr): New internal function definition.
	(__libdw_finddbg_cb): Likewise.
	* libdw_find_split_unit.c (__libdw_find_split_unit): Insert split
	Dwarf into skeleton dbg split_tree.
	* libdw_findcu.c (__libdw_finddbg_cb): New function.
	(__libdw_find_split_dbg_addr): Likewise.
	* dwarf_end (dwarf_end): Destroy split_tree.

2018-05-29  Mark Wielaard  <mark@klomp.org>
